# utils

./: .gitignore  .travis.yaml  Cargo.toml  Makefile  README.md  appveyor.yml  cli.json  deploy-heroku.sh  docker-build.sh  docker-explore.sh  docker-run.sh  drx.sh  git-update.sh  index.html  package.json  pre-install.js  publish.sh  shell.js  start.js  tailwind-44805b7abcfd6d0c.css  uninstall.js  util.sh  utils-demo.webm  utils-web-ff9734b1910aeef6.js  utils-web-ff9734b1910aeef6_bg.wasm  watch.sh
.github/workflows/: build.yaml  build.yml  changelog.yml  gh-pages-deploy.yml  mdbook.yml
cli/: Cargo.toml
cli/src/: constants.rs  lib.rs  pkg.rs  utils.rs
cli/src/commands/: cli.rs  gitignore.rs  mod.rs  readme.rs  store.rs
config/: Cargo.toml
core/: Cargo.toml  tauri.conf.json
core/icons/: icon.icns
core/src/: main.rs  parser.rs
core/src/commands/: mod.rs
docs/: book.toml
docs/src/: SUMMARY.md  overview.md
email/: Cargo.toml
entity/: Cargo.toml
entity/src/: config.rs  emails.rs  lib.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240321_172635_create_store_table.rs  m20240322_124354_create_password_table.rs
server/: deno.json  main.ts
src/: config.rs  constants.rs  database.rs  main.rs  parser.rs  security_questions.rs  style.rs  utils.rs
src/assets/: email.hbs  email.mjml
src/commands/: auth.rs  cli.rs  download.rs  email.rs  generator.rs  git.rs  gitignore.rs  mod.rs  readme.rs  sms.rs  store.rs
src/database/: mod.rs  repository.rs  store.rs
src/databasetttt/: crash.rs  security_questions.rs
src/errors/: app.rs  database.rs  file_system.rs  mod.rs
src/helpers/: mod.rs
src/parsers/: app.rs  generator.rs  mod.rs  store.rs
src/templates/: utils.conf
src/ui/: mod.rs
src/utils/: console.rs  file_system.rs  mod.rs  parser.rs
style/: Cargo.toml
style/src/: lib.rs  style.rs
utils-cli/: Cargo.toml  build.rs
utils-cli/entity/src/: password.rs  store.rs
utils-cli/proto/: auth.proto  storage.proto
utils-cli/src/: database.rs  main.rs  parser.rs  utils_auth.rs  utils_data_back_up.rs  utils_storage.rs
utils-cli/src/commands/: auth.rs  mod.rs  readme.rs
utils-cli/src/templates/: utils.conf
utils-server/: .gitignore  Cargo.toml  Dockerfile  README.Docker.md  build.rs  compose.yaml
utils-server/entity/: backup.rs  lib.rs  prelude.rs  user_information.rs
utils-server/migration/src/: lib.rs  m20240513_124422_create_user_information_table.rs  m20240513_130431_create_data_backup__table.rs
utils-server/proto/: backup-data.proto  compose.yaml
utils-server/src/: auth.rs  main.rs  multiplex.rs  pkg.rs  server.rs  storage.rs  utils_auth.rs
utils-server/src/controllers/: auth.rs  mod.rs
utils-server/src/grpc/: auth.rs  storage.rs
utils-server/src/http/: router.rs  routes.rs
utils-server/src/proto/: mod.rs  utils_auth.rs
utils-web/: .gitignore  Cargo.toml  README.md  index.html  justfile  leptosefmt.toml  next.config.mjs  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  tsconfig.json  vue-writer.d.ts
utils-web/src/: App.vue  app.rs  main.rs  main.ts
utils-web/src/app/: login.tsx
utils-web/src/components/: button.rs  card.rs  icon.rs  input.rs  logo.rs  mod.rs  text.rs  view.rs
utils-web/src/components/button/: button.scss
utils-web/src/layout/: Default.vue
utils-web/src/layouts/: dashboard.rs  default.rs  mod.rs
utils-web/src/lib/: data.rs  mod.rs
utils-web/src/pages/: authorize.rs  dashboard.rs  docs.rs  home.rs  login.rs  mfa.rs  mod.rs  signup.rs
utils-web/src/partials/: footer.rs  nav.rs
utils-web/src/router/: index.ts
utils-web/src/views/: DashboardView.vue  HomeView.vue  LoginView.vue  SignupView.vue
utils-web/style/: button.css  colbal.css  global.css  output.css  tailwind.css
