
[package]
authors = ["adeoye adefemi <adefemiadeoye@yahoo.com>"]
description = "a compilation of utility scripts for every day use in building applications and using certain features on my laptop"
edition = "2021"
name = "utils"
version = "1.1.2"
license = "Apache-2.0"


[dependencies]
clap = { version = "4.5.32", features = ["cargo"] }
console = "0.15.11"
crossterm = "0.28.1"
rusqlite = { version = "0.34.0", features = ["backup", "bundled", "chrono", "serde_json"] }
dialoguer = { version = "0.10.4", features = ["fuzzy-select", "completion"] }
dirs = "5.0.1"
include_dir = "0.7.4"
lazy_static = "1.5.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
async-trait = "0.1.88"
chrono = "0.4.40"
