
[package]
authors = ["adeoye adefemi <adefemiadeoye@yahoo.com>"]
description = "A set of extensible tools to accelerate software development"
edition = "2021"
name = "toolbox"
version = "1.1.4"
license = "Apache-2.0"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["cargo"] }
console = "0.15.11"
dialoguer = { version = "0.10.4", features = ["fuzzy-select", "completion"] }
dirs = "5.0.1"
include_dir = "0.7.4"
lazy_static = "1.5.0"
ratatui = "0.29.0"
rusqlite = { version = "0.34.0", features = [
    "backup",
    "bundled",
    "chrono",
    "serde_json",
] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4"] }
