[package]
name = "utils-cli-entity"
version = "1.0.5"
edition = "2021"
authors = ["adeoye adefemi <adefemiadeoye@yahoo.com>"]
description = "util-cli entity relation"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12" }
