[package]
name = "utils-server"
version = "0.1.0"
edition = "2021"


[workspace]
members = [".", "migration"]


[dependencies]
axum = "0.6.20"
futures = "0.3.30"
hyper = { version = "0.14", features = ["full"] }
prost = "0.12.3"
ring = "0.17.8"
shuttle-axum = "0.42.0"
shuttle-runtime = "0.42.0"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.11.0"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "debug-print"
] }
# entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
# tower-http = { version = "0.5.2", features = ["cors"] }
tower-http = { version = "0.4.0", features = ["cors"] }
serde = { version = "1.0.202", features = ["derive"] }


[build-dependencies]
tonic-build = "0.11.0"
