[package]
name = "utils-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.11", features = ["csr"] }
wasm-bindgen = { version = "0.2" }
console_log = { version = "1" }
leptos_router = { version = "0.6.11", features = ["csr"] }
leptos_meta = { version = "0.6.11", features = ["csr"] }
gloo-net = { version = "0.2", features = ["http"] }
log = "0.4.21"
