[package]
name = "utils-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.11", features = ["csr"] }
wasm-bindgen = { version = "0.2" }
console_log = { version = "1" }
leptos_router = { version = "0.6.11", features = ["csr"] }
leptos_meta = { version = "0.6.11", features = ["csr"] }
gloo-net = { version = "0.2", features = ["http"] }
log = "0.4.21"
serde = { version = "1.0.201", features = ["derive"] }
leptos_image = { version = "0.2.0", optional = true }
leptos-remix-icon = "1.0.0"

[features]
leptos_image = ["dep:leptos_image"]





# [package.metadata.leptos]
# # Path, relative to root, to generat rust code to
# gen_file = "src/server/generated.rs"
# # Path to the source index.html file
# index_file = "index.html"
# # [Optional] Files in the asset_dir will be copied to the target/site directory
# assets_dir = "public"
# # [Optional] Command to use when running end2end tests. It will run in the end2end dir.
# end2end_test_cmd = "npx playwright test"
# # On which port to serve the client side rendered site (when using --csr option)
# csr_port = 3000
# # The port to use for automatic reload monitoring
# reload_port = 3001

# [package.metadata.leptos.style]
# # Main style file. If scss or sass then it will be compiled to css.
# # the parent folder will be watched for changes
# file = "style/output.css"
# # A https://browsersl.ist query
# browserquery = "defaults"
